fixed alignments on homepage

--- a/static/themes/index.css
+++ b/static/themes/index.css
@@ -15,3 +15,7 @@ body{
 .signup_login{
   float: right;
 }
+img{
+  height: 125px;
+  width: 75;
+}
